src/objects/Foundation_States__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country_Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <label>State_Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Name__c</fullName>
        <label>State_Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Foundation_States</label>
</CustomObject>